# sonitoring

./: CMakeLists.txt  CPUPage.qml  CPUPageHandler.cpp  CPUPageHandler.h  DiskPageHandler.h  GPUPageHandler.cpp  GPUPageHandler.h  Main.qml  RAMPageHandler.cpp  RAMPageHandler.h  README.md  main.cpp  projektdokumentation.md  resources.qrc
